--- a/package.json
+++ b/package.json
@@ -15,75 +15,73 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@apollo/client": "^4.0.5",
-    "@arcgis/core": "^4.33.13",
+    "@apollo/client": "^4.0.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@fortawesome/fontawesome-svg-core": "^7.0.1",
-    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "@hookform/resolvers": "^5.2.2",
-    "@react-pdf/renderer": "^4.3.0",
-    "@sentry/react": "^10.11.0",
+    "@react-pdf/renderer": "^4.3.1",
+    "@sentry/react": "^10.17.0",
     "@sentry/vite-plugin": "^4.3.0",
-    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "buffer": "^6.0.3",
     "graphql": "^16.11.0",
     "immer": "^10.1.3",
     "leaflet": "^1.9.4",
-    "maplibre-gl": "^5.7.1",
+    "maplibre-gl": "^5.8.0",
     "process": "^0.11.10",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.62.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.63.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.9.1",
+    "react-router-dom": "^7.9.3",
     "rxjs": "^7.8.2",
     "styled-components": "^6.1.19",
     "web-vitals": "^5.1.0",
-    "zod": "^4.1.8",
+    "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@eslint/js": "^9.35.0",
-    "@storybook/addon-onboarding": "9.1.5",
-    "@storybook/preset-create-react-app": "9.1.5",
-    "@storybook/react-vite": "^9.1.5",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tanstack/eslint-plugin-query": "^5.86.0",
-    "@tanstack/react-query-devtools": "^5.87.4",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@eslint/js": "^9.36.0",
+    "@storybook/addon-docs": "9.1.10",
+    "@storybook/addon-onboarding": "9.1.10",
+    "@storybook/react-vite": "^9.1.10",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@tanstack/eslint-plugin-query": "^5.91.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/leaflet": "^1.9.20",
-    "@types/node": "^24.4.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react-swc": "^4.0.1",
-    "eslint": "^9.35.0",
+    "@types/node": "^24.6.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@vitejs/plugin-react-swc": "^4.1.0",
+    "eslint": "^9.36.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-hooks": "^6.1.0",
+    "eslint-plugin-react-refresh": "^0.4.23",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-storybook": "^9.1.5",
+    "eslint-plugin-storybook": "^9.1.10",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
-    "msw": "^2.11.2",
+    "msw": "^2.11.3",
     "postcss": "^8.5.6",
-    "rollup-plugin-visualizer": "^6.0.3",
-    "storybook": "9.1.5",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.5",
-    "vitest": "^3.2.4",
-    "@storybook/addon-docs": "9.1.5"
+    "rollup-plugin-visualizer": "^6.0.4",
+    "storybook": "9.1.10",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.8",
+    "vitest": "^3.2.4"
   },
   "eslintConfig": {
     "extends": [
